src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>chose one value from drop-down list</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>panding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>line_items_sum__c</fullName>
        <label>line items sum</label>
        <summarizedField>Line_Item__c.total_sum__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>shipping__c</fullName>
        <label>shipping</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>с</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>